--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         </div>
                         <div class="btn">
                             
-                            <button></button> <a class="btn-primary" href="/index1.html"> Sign In </a> </button>
+                            <button></button> <a class="btn-primary" href="/reg.html"> Sign In </a> </button>
                             <!-- <button class="btn-primary"  type="submit">Sign In</button> -->
                             
                         </div>
