--- a/signup.html
+++ b/signup.html
@@ -23,7 +23,7 @@
                             <input class="email" type="password" placeholder="Set Password">
                         </div>
                         <div class="btn">
-                            <a href="./index1.html" class="btn-primary" type="submit" >Sign Up</a>
+                            <a href="./reg.html" class="btn-primary" type="submit" >Sign Up</a>
                             <!-- <button class="btn-primary" type="submit" >Sign Up</button> </a> -->
                         </div>
                         <div class="help">
